# actix-servidor

./: Cargo.toml  README.md  actix1.sql
log/: log.txt
src/: auth_google.rs  generador_de_nonces.rs  main.rs  rutas.rs
templates/: index.html  login.html  registro.html  user.html
templates/etc/js/: comunes.js
