[package]
name = "servidor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.4.1"
futures = "0.3"
http = "0.2"
tera = "1.10"
env_logger = "0.9"
rand = "0.8"
base64 = "0.13"
log = "0.4"
mysql = "20.0.1"
sqlx = { version = "0.5.7", features = ["runtime-tokio-native-tls", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["parsing", "derive"] }