[package]
name = "servidor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.4.1"
actix-session = "0.5"
actix-files = "0.6"
futures = "0.3"
http = "0.2"
tera = "1.10"
env_logger = "0.9"
rand = "0.8"
base64 = "0.13"
log = "0.4"
mysql = "20.0.1"
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["parsing", "derive"] }
oauth2 = "4.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

